kubernetes/octopus/00-00-namespace-octopus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: octopus
  labels:
    name: octopus
    type: productive
