kubernetes/octopus/01-09-deployment-click.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: octopus
    proc: worker
    spec: click
  name: octopus-click
  namespace: octopus
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: octopus
        proc: worker
        spec: click
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - command:
        - bash
        - /app/bin/runioctopus-worker.sh
        - click
        image: registry.clickyab.ae/clickyab/octopus:master.204
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: octopus-master
        ports:
        - containerPort: 9000
          name: web-health
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 100Mi
      terminationGracePeriodSeconds: 30
