kubernetes/octopus/05-00-deployment-octopus-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: octopus
    k8s-app: octopus-web
    proc: web
  name: octopus-web
  namespace: octopus
spec:
  replicas: 0
  selector:
    matchLabels:
      app: octopus
      k8s-app: octopus-web
      proc: web
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: octopus
        k8s-app: octopus-web
        proc: web
    spec:
      containers:
      - command:
        - bash
        - /app/bin/runoctupos.sh
        image: registry.clickyab.ae/clickyab/octopus:master.204
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: octopus-master
        ports:
        - containerPort: 9000
          name: octopus-web
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
