kubernetes/octopus/05-04-deployment-redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    deployment: redis
  name: redis
  namespace: octopus
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - image: redis:latest
        imagePullPolicy: Always
        name: redis
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 100Mi
        stdin: true
      terminationGracePeriodSeconds: 30
