kubernetes/octopus/05-06-deployment-octopus-demand.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: octopus
    proc: worker
    spec: demand
  name: octopus-demand
  namespace: octopus
spec:
  replicas: 0
  selector:
    matchLabels:
      app: octopus
      proc: worker
      spec: demand
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: octopus
        proc: worker
        spec: demand
    spec:
      containers:
      - command:
        - bash
        - /app/bin/runioctopus-worker.sh
        - demand
        image: registry.clickyab.ae/clickyab/octopus:master.204
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: octopus-master
        ports:
        - containerPort: 9000
          name: web-health
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
