kubernetes/octopus/5-0-Deployment-octopus-aggregator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: octopus
    proc: worker
    spec: aggregator
  name: octopus-aggregator
  namespace: octopus
spec:
  replicas: 0
  selector:
    matchLabels:
      app: octopus
      proc: worker
      spec: aggregator
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: octopus
        proc: worker
        spec: aggregator
    spec:
      containers:
      - command:
        - bash
        - /app/bin/runioctopus-worker.sh
        - aggregator
        image: registry.clickyab.ae/clickyab/octopus:master.204
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: octopus-master
        ports:
        - containerPort: 9000
          name: web-health
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
