kubernetes/octopus/5-2-Deployment-octopus-console.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: octopus
    k8s-app: octopus-front
    proc: web
  name: octopus-console
  namespace: octopus
spec:
  replicas: 0
  selector:
    matchLabels:
      app: octopus
      k8s-app: octopus-front
      proc: web
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: octopus
        k8s-app: octopus-front
        proc: web
    spec:
      containers:
      - image: registry.clickyab.ae/clickyab/octopus-console:master.43
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        name: octopus-console-master
        ports:
        - containerPort: 80
          name: octoconsole
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 15
        resources:
          limits:
            memory: 4Gi
          requests:
            memory: 3584Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
