kubernetes/octopus/02-01-service-console.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: octopus-web-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: OctopusService
  name: octopus-front
  namespace: octopus
spec:
  ports:
  - name: octoconsole
    port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: octopus-front
