kubernetes/octopus/02-02-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: octopus-web-service
  name: octopus-service
  namespace: octopus
spec:
  ports:
  - name: octopusweb
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: octopus-web
