kubernetes/octopus/02-08-service-fakedemand.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: octopus-web-service
  name: octopus-fakedemand
  namespace: octopus
spec:
  ports:
  - name: octofake
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: octopus-fakedemand
