kubernetes/octopus/06-00-service-octopus-front.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: octopus-web-service
  name: octopus-front
  namespace: octopus
spec:
  ports:
  - name: octoconsole
    port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: octopus-front
