kubernetes/octopus/07-00-ingress-octopus-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: octopus-web-ingress
  namespace: octopus
spec:
  rules:
  - host: exchange.clickyab.com
    http:
      paths:
      - backend:
          serviceName: octopus-service
          servicePort: 9000
        path: /api
